--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-loader": "^15.5.0",
+    "vue-markdown-loader": "^2.4.1",
+    "vue-md-loader": "^1.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
